--- a/gradle.properties
+++ b/gradle.properties
@@ -42,4 +42,4 @@ mod_group_id=net.PracticeMod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Me
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description= My First NeoForge Mod.
+mod_description= My First NeoForge Mod For minecraft 1.21.1
